feat: 크루 검색 + 공개 크루 가입 + CI/CD 개선 (#28)
* chore: CI/CD develop 브랜치 전략 + E2E 자동화 (#22)

* chore: 수동 배포 → GitHub Actions + Docker CI/CD 자동화

- Dockerfile 추가 (멀티스테이지 빌드: gradle→jre-alpine)
- deploy.yml 추가 (PR→CI만, main push→CI+CD+Lambda)
- test.yml 삭제 (deploy.yml ci job으로 역할 통합)
- spring-boot-starter-actuator 추가 (헬스체크용)
- SecurityConfig /actuator/health permitAll 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix: deploy.yml 시크릿 셸 메타캐릭터 quoting 수정

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* docs: SHA 태그 배포 추후 고려 사항 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* chore: 수동 배포 → GitHub Actions + Docker CI/CD 자동화 (#18)

* chore: 수동 배포 → GitHub Actions + Docker CI/CD 자동화

- Dockerfile 추가 (멀티스테이지 빌드: gradle→jre-alpine)
- deploy.yml 추가 (PR→CI만, main push→CI+CD+Lambda)
- test.yml 삭제 (deploy.yml ci job으로 역할 통합)
- spring-boot-starter-actuator 추가 (헬스체크용)
- SecurityConfig /actuator/health permitAll 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* fix: deploy.yml 시크릿 셸 메타캐릭터 quoting 수정

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* docs: SHA 태그 배포 추후 고려 사항 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>

* refactor: removeMember() 상태/권한 검증을 도메인으로 이동 + 탈퇴/삭제 비관적 락 적용

- Crew.removeMember()에 RECRUITING 상태 검증 + LEADER 탈퇴 방지 추가 (I-1)
- LeaveCrewService에서 중복 검증 제거, 도메인에 위임
- Leave/Delete에 findByIdWithLock() 적용하여 동시성 보장 (W-1)
- CrewTest에 removeMember 도메인 예외 테스트 2건 추가

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* feat: 크루 수정/삭제/탈퇴 기능 구현
- PATCH /crews/{crewId} 크루 수정 (LEADER + RECRUITING)
- DELETE /crews/{crewId} 크루 삭제 (LEADER + RECRUITING + 혼자)
- DELETE /crews/{crewId}/members/me 크루 탈퇴 (MEMBER + RECRUITING)
- ErrorCode CR017~CR021 추가, Cucumber + 단위테스트 작성

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* feat: CI/CD Docker 자동화 + 크루 수정/삭제/탈퇴 기능 (#19)

* chore: 수동 배포 → GitHub Actions + Docker CI/CD 자동화

- Dockerfile